@@ -2,6 +2,18 @@
 
         Reviewed by Maciej.
 
+        Bug 18736: SQUIRRELFISH: switch statements with no default have incorrect codegen
+        <https://bugs.webkit.org/show_bug.cgi?id=18736>
+
+        Ensure the "default" target is correct in the absence of an explicit default handler.
+
+        * kjs/nodes.cpp:
+        (KJS::CaseBlockNode::emitCodeForBlock):
+
+2008-04-25  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Maciej.
+
         Bug 18628: SQUIRRELFISH: need to support recursion limit
         <https://bugs.webkit.org/show_bug.cgi?id=18628>
 
